# Tau

./: .appveyor.yml  .gitignore  CMakeLists.txt
Tau/: main.cpp
Tau/brush/: brush.cpp  brush.h
Tau/canvas/: canvas.cpp  canvas.h
Tau/fileManager/: fileManager.cpp  fileManager.h
Tau/renderer/: renderer.cpp  renderer.h
Tau/ui/palette/: palette.cpp  palette.h
Tau/ui/slider/: slider.cpp  slider.h
